@@ -81,6 +81,8 @@ Please visit http://aegisub.net to download latest version
 - Moved karaoke syllable text in audio display to the top instead of bottom, since it often covers important information in spectrum mode (jfs)
 - Implemented a version checker that can automatically or manually check if there are any updates to Aegisub. (AMZ)
 - Added support for reading v4.00++ (ASS2) files. (AMZ)
+- Changes to text will no longer be discarded when you commit timing in the audio display and vice-versa. (AMZ)
+- Fixed glitches related to the Duration time edit box. (AMZ)
 
 
 = 1.10 beta - 2006.08.07 ===========================
